force-app/main/default/objects/Activity/fields/CaseOnHold__c.field-meta.xml
<CustomField>
    <fullName>CaseOnHold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de controle do Flow, para identificar se deve trocar o Status do Caso para Em espera(On Hold)</description>
    <label>Caso em Espera?</label>
    <type>Checkbox</type>
</CustomField>