force-app/main/default/objects/Activity/fields/DataConclusao__c.field-meta.xml
<CustomField>
    <fullName>DataConclusao__c</fullName>
    <description>Data de Conclusão da Tarefa.</description>
    <label>Data de Conclusão</label>
    <type>DateTime</type>
</CustomField>