force-app/main/default/objects/Activity/fields/Fila__c.field-meta.xml
<CustomField>
    <fullName>Fila__c</fullName>
    <label>Fila</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Atendimento N1</fullName>
            </value>
            <value>
                <fullName>Key account</fullName>
            </value>
            <value>
                <fullName>Financeiro Infra</fullName>
            </value>
            <value>
                <fullName>Transportes</fullName>
            </value>
            <value>
                <fullName>Logística</fullName>
            </value>
            <value>
                <fullName>Darkstore</fullName>
            </value>
            <value>
                <fullName>Distribuidor</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>Market Place</fullName>
            </value>
            <value>
                <fullName>Reclame Aqui</fullName>
            </value>
            <value>
                <fullName>Consumidor</fullName>
            </value>
            <value>
                <fullName>Financeiro Marca</fullName>
            </value>
            <value>
                <fullName>Consumidor Marca</fullName>
            </value>
            <value>
                <fullName>Logística Marca</fullName>
            </value>
            <value>
                <fullName>SAC</fullName>
            </value>
            <value>
                <fullName>NRP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>