force-app/main/default/objects/Activity/fields/FilaSubtipo__c.field-meta.xml
<CustomField>
    <fullName>FilaSubtipo__c</fullName>
    <label>Fila Sub-tipo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Fila__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cupom</fullName>
            </value>
            <value>
                <fullName>Erro no site</fullName>
            </value>
            <value>
                <fullName>Integracao de pedido</fullName>
                <label>Integração de pedido</label>
            </value>
            <value>
                <fullName>Crossdocking</fullName>
            </value>
            <value>
                <fullName>Cotação</fullName>
            </value>
            <value>
                <fullName>Autorização</fullName>
            </value>
            <value>
                <fullName>Alteração no Cadastro</fullName>
            </value>
            <value>
                <fullName>Descrição de produto</fullName>
            </value>
            <value>
                <fullName>Falha no APP</fullName>
            </value>
            <value>
                <fullName>Falha no Whatsapp</fullName>
            </value>
            <value>
                <fullName>Venda assistida</fullName>
            </value>
            <value>
                <fullName>Guide Shop</fullName>
            </value>
            <value>
                <fullName>Aguardando Reembolso</fullName>
            </value>
            <value>
                <fullName>Aguardando Vale</fullName>
            </value>
            <value>
                <fullName>Aguardando Estorno</fullName>
            </value>
            <value>
                <fullName>Aguardando Comprovante</fullName>
            </value>
            <value>
                <fullName>Aprovar Pedidos</fullName>
            </value>
            <value>
                <fullName>Confirmar Pagamento</fullName>
            </value>
            <value>
                <fullName>Cancelar Vale</fullName>
            </value>
            <value>
                <fullName>Reativar Vale</fullName>
            </value>
            <value>
                <fullName>2° via de Boleto</fullName>
            </value>
            <value>
                <fullName>Abatimento de Boleto</fullName>
            </value>
            <value>
                <fullName>Prorrogação de Boleto</fullName>
            </value>
            <value>
                <fullName>Erro Pix</fullName>
            </value>
            <value>
                <fullName>Aumento do Limite de Crédito</fullName>
            </value>
            <value>
                <fullName>Revisão do Limite de Crédito</fullName>
            </value>
            <value>
                <fullName>Aguardando PI</fullName>
            </value>
            <value>
                <fullName>Acareação</fullName>
            </value>
            <value>
                <fullName>Atraso na entrega</fullName>
            </value>
            <value>
                <fullName>Aprovação de extravio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>