force-app/main/default/objects/Activity/fields/Parecer__c.field-meta.xml
<CustomField>
    <fullName>Parecer__c</fullName>
    <label>Parecer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>